--- a/.github/workflows/ci-cd-develop.yml
+++ b/.github/workflows/ci-cd-develop.yml
@@ -1,1 +1,54 @@
-
+name: GitHub CI/CD Cloudrun
+# Controls when the workflow will run
+on:
+  # Triggers the workflow on push or pull request events but only for the develop branch
+  push:
+    branches: [ develop ]
+env:
+  REGION: us-east4 # Cloud Run zone
+  PROJECT_ID: pyc-embargos-test # GCP project
+  BASE_IMAGE: gcr.io/pyc-embargos-test/nextjs-app # Container registry entry for the frontend app
+  SERVICE_NAME: nextjs-frontend # Cloud run service name
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+jobs:
+  # This workflow contains a single job called “test-build-deploy”
+  test-build-deploy:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+    # Environment for deployment
+    environment:
+          name: ‘Testing’
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v3
+      - name: Install dependencies
+        run: npm install
+      - name: Build Next.js project
+        run: npm run build
+      - name: Set up Cloud SDK
+        uses: google-github-actions/setup-gcloud@v0
+        with:
+          project_id: ${{ secrets.GCP_PROJECT_ID_TEST }}
+          service_account_key: ${{ secrets.GCP_SA_KEY_TEST }}
+          export_default_credentials: true
+      - name: Login to GCR # Login to GCP
+        uses: docker/login-action@v1
+        with:
+          registry: gcr.io
+          username: _json_key
+          password: ${{ secrets.GCP_SA_KEY_TEST }}
+      - name: Build & Publish Image # Use the Dockerfile to publish image
+        uses: docker/build-push-action@v2
+        id: build
+        with:
+          context: .
+          push: true
+          tags: ${{ env.BASE_IMAGE }}:${{ github.sha }}
+      - name: Deploy to Cloud Run
+        id: deploy
+        uses: google-github-actions/deploy-cloudrun@main
+        with:
+          region: ${{ env.REGION }}
+          service: ${{ env.SERVICE_NAME }}
+          image: ${{ env.BASE_IMAGE }}:${{ github.sha }}
